--- a/index.html
+++ b/index.html
@@ -1,37 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>DOOM no Navegador</title>
+<meta charset="UTF-8">
+<title>DOOM Mobile</title>
 
-  <!-- js-dos -->
-  <link rel="stylesheet" href="https://js-dos.com/6.22/current/js-dos.css">
-  <script src="https://js-dos.com/6.22/current/js-dos.js"></script>
+<link rel="stylesheet" href="https://js-dos.com/6.22/current/js-dos.css">
+<script src="https://js-dos.com/6.22/current/js-dos.js"></script>
 
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #dos {
-      width: 100%;
-      max-width: 800px;
-      height: 600px;
-    }
-  </style>
+<style>
+body {
+  margin: 0;
+  background: black;
+  overflow: hidden;
+}
+
+#dos {
+  width: 100vw;
+  height: 60vh;
+}
+
+/* CONTROLES */
+.controls {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.dpad {
+  display: grid;
+  grid-template-columns: 70px 70px 70px;
+  grid-template-rows: 70px 70px 70px;
+  gap: 5px;
+}
+
+.btn {
+  background: rgba(255,255,255,0.15);
+  border-radius: 12px;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  line-height: 70px;
+  user-select: none;
+}
+
+.action {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.action .btn {
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
+  font-size: 20px;
+}
+</style>
 </head>
+
 <body>
 
 <div id="dos"></div>
 
+<div class="controls">
+  <!-- DIRECIONAL -->
+  <div class="dpad">
+    <div></div>
+    <div class="btn" data-key="ArrowUp">▲</div>
+    <div></div>
+
+    <div class="btn" data-key="ArrowLeft">◀</div>
+    <div class="btn" data-key="Space">●</div>
+    <div class="btn" data-key="ArrowRight">▶</div>
+
+    <div></div>
+    <div class="btn" data-key="ArrowDown">▼</div>
+    <div></div>
+  </div>
+
+  <!-- AÇÃO -->
+  <div class="action">
+    <div class="btn" data-key="Control">ATIRAR</div>
+    <div class="btn" data-key="Alt">USAR</div>
+  </div>
+</div>
+
 <script>
-  Dos(document.getElementById("dos"), {
+  const dos = Dos(document.getElementById("dos"), {
     wdosboxUrl: "https://js-dos.com/6.22/current/wdosbox.js"
-  }).run("https://js-dos.com/cdn/upload/DOOM-@evilution.zip");
+  });
+
+  dos.run("https://js-dos.com/cdn/upload/DOOM-@evilution.zip");
+
+  function pressKey(key) {
+    document.dispatchEvent(new KeyboardEvent("keydown", { key }));
+  }
+
+  function releaseKey(key) {
+    document.dispatchEvent(new KeyboardEvent("keyup", { key }));
+  }
+
+  document.querySelectorAll(".btn").forEach(btn => {
+    const key = btn.dataset.key;
+
+    btn.addEventListener("touchstart", e => {
+      e.preventDefault();
+      pressKey(key);
+    });
+
+    btn.addEventListener("touchend", e => {
+      e.preventDefault();
+      releaseKey(key);
+    });
+  });
 </script>
 
 </body>
