--- a/index.html
+++ b/index.html
@@ -1,124 +1,168 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>DOOM Mobile</title>
-
-<link rel="stylesheet" href="https://js-dos.com/6.22/current/js-dos.css">
-<script src="https://js-dos.com/6.22/current/js-dos.js"></script>
-
-<style>
-body {
-  margin: 0;
-  background: black;
-  overflow: hidden;
-}
-
-#dos {
-  width: 100vw;
-  height: 60vh;
-}
-
-/* CONTROLES */
-.controls {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 40vh;
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-  box-sizing: border-box;
-}
-
-.dpad {
-  display: grid;
-  grid-template-columns: 70px 70px 70px;
-  grid-template-rows: 70px 70px 70px;
-  gap: 5px;
-}
-
-.btn {
-  background: rgba(255,255,255,0.15);
-  border-radius: 12px;
-  color: white;
-  font-size: 24px;
-  text-align: center;
-  line-height: 70px;
-  user-select: none;
-}
-
-.action {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.action .btn {
-  width: 90px;
-  height: 90px;
-  line-height: 90px;
-  font-size: 20px;
-}
-</style>
+    <meta charset="UTF-8">
+    <html lang="en">
+    <meta name="description" content="MF-Doom">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MF DOOM</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" />
+    <script src="https://kit.fontawesome.com/893a019cfa.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#"> <img src="logos.png" alt="logo"></a> 
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li> <a href="#bio" data-value="bio">Bio</a> </li>
+                <li> <a href="#bottom-section" data-value="bottom-section">Music</a> </li>
+                <li> <a href="#music" data-value="music">Video</a> </li>
+            </ul>
+        </div>
+    </nav>
 
-<div id="dos"></div>
+ <section id="hero">
+     <div class="hero-image">
+        <h1>The best MC with no chain ya ever <a href="#music" class="button cta-button">heard</a> </h1>
+    </div> 
 
-<div class="controls">
-  <!-- DIRECIONAL -->
-  <div class="dpad">
-    <div></div>
-    <div class="btn" data-key="ArrowUp">▲</div>
-    <div></div>
+ </section>
 
-    <div class="btn" data-key="ArrowLeft">◀</div>
-    <div class="btn" data-key="Space">●</div>
-    <div class="btn" data-key="ArrowRight">▶</div>
+ <section id="bio">
+     <div class="title">
+        <h1>MF DOOM—Masked Visionary, Rhyme-Bending Supervillain, and Hip-Hop Legend</h1>
+        </div>
+     <div class="row">
+         <div class="column">
+            <div class="stage-pic">
+                <img src="doom2.jpeg" alt="bio">   
+            </div>
+        </div>
+        <div class="column">
+            <p> Daniel Dumile (January 9, 1971 – October 31, 2020), best known by 
+            his stage name MF Doom or simply Doom (both stylized in all caps), was a British-American rapper and record producer. Noted for his intricate wordplay, signature metal mask, and "supervillain" stage persona, Dumile became a major figure of underground hip hop in the 2000s. After his death, Variety described him as one of the scene's "most celebrated, unpredictable and enigmatic figures".</p>
+            <p>Born in London, Dumile moved to Long Island, New York, at a young age. He began his career in 1988 as a member of KMD, performing under the name Zev Love X; the group disbanded in 1993 upon the death of member DJ Subroc, Dumile's brother. After a hiatus, Dumile reemerged in the late 1990s, performing at open mic events while wearing a metal mask resembling that of Marvel Comics supervillain Doctor Doom, who is depicted on the cover of his 1999 debut solo album Operation: Doomsday. He adopted the MF Doom persona and rarely made unmasked public appearances thereafter.</p>
+            <p>Between 2003 and 2005, Dumile released four solo studio albums, including the critically acclaimed Mm..Food (2004), and two collaborative albums, using the MF Doom moniker and the pseudonyms King Geedorah and Viktor Vaughn. His sixth and final solo album, Born Like This, was released in 2009. Though he lived the majority of his life in the United States, he never gained American citizenship and was denied reentry in 2010 after returning from an international tour. He relocated to London and, in his final years, worked mostly in collaboration with various other rappers.</p>
+        </div>
+    </div>
+    <span class="img-container">
+        <img src="logo.png"alt="bio-logo" loading="lazy">
+    </span>
+</section>
 
-    <div></div>
-    <div class="btn" data-key="ArrowDown">▼</div>
-    <div></div>
-  </div>
+ <section id="bottom-section">
+    <div class="title">
+        <h2>Music</h2>
+   </div>
+   <div class="container">
+    <div>
+        <h3>Operation Doomsday</h3>
+        <img class="album" src="Albums/MF-DOOM-Operation.jpeg"loading="lazy" alt="Doomsday">
+    </div>
+    <div>
+        <h3>Mm..Food?</h3>
+          <img class="album" src="Albums/Mmfood.jpg" loading="lazy" alt="mmfood">
+       </div>
+    <div>
+        <h3>Born Like This</h3>
+        <img class="album" src="Albums/Born-like-this.jpg" loading="lazy" alt="Born-like-this">
+    </div>
+    <div>
+        <h3>Take Me To Your Leader</h3>
+            <h4>(as King Geedorah)</h4>
+        <img class="album" src="Albums/King_Geedorah_-_Take_Me_to_Your_Leader_album_cover.jpg" loading="lazy" alt="leader">
+    </div>
+    <div>
+        <h3>Vaudeville Villain</h3>
+        <h4>(as Viktor Vaughn)</h4>
+        <img class="album" src="Albums/Vaudevillevillain.jpg" loading="lazy" alt="Vaudevillevillain">
+    </div>
+    <div>
+        <h3>Venomous Villain</h3>
+        <h4>(as Viktor Vaughn)</h4>
+        <img class="album" src="Albums/Venomousvillain.jpg" loading="lazy" alt="Venomousvillain">
+    </div>
+    <div>
+        <h3>Madvillainy</h3>
+        <h4>(w/Madlib as Madvillain)</h4>
+        <img class="album" src="Albums/Madvillainy_cover.png" loading="lazy" alt="Madvillainy">
+    </div>
+    <div>
+        <h3>Operation Doomsday</h3>
+        <h4>(w/MF Grimm)</h4>
+        <img class="album" src="Albums/Mfdoommfgri_specialhe_101b.jpg" loading="lazy" alt="special-herbs">
+    </div>
+    <div>
+        <h3>The Mouse and the Mask</h3>
+        <h4>(w/Danger Mouse as Danger Doom)</h4>
+        <img class="album" src="Albums/Dangerdoom.jpg" loading="lazy" alt="Dangerdoom">
+    </div>
+    <div>
+        <h3>Key to the Kuffs</h3>
+        <h4>(w/Jneiro Jarel as JJ Doom)</h4>
+        <img class="album" src="Albums/Key_To_The_Kuffs_Album_Cover.jpeg" loading="lazy" alt="Key_To_The_Kuffs_Album_Cover">
+    </div>
+    <div>
+        <h3>NehruvianDoom</h3>
+        <h4>(w/Bishop Nehru as NehruvianDoom)</h4>
+        <img class="album" src="Albums/NehruvianDOOM.jpg" loading="lazy" alt="NehruvianDOOM">
+    </div>
+    <div>
+        <h3>Czarface Meets Metal Face</h3>
+        <h4>(w/Czarface)</h4>
+        <img class="album" src="Albums/Czarface_Meets_Metal_Face.jpeg" loading="lazy" alt="Czarface_Meets_Metal_Face">
+    </div>
+    </div>
+    <div class="title">
+        <h2>Listen</h2>
+   </div>
+    <div class="row">
+        <div class="column">
+            <iframe title="Top songs" src="https://open.spotify.com/embed/artist/2pAWfrd7WFF3XhVt9GooDL" style="width:100%;max-width:660px;overflow:hidden" height="450" frameborder="0"  allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>
+        <div class="column">
+            <iframe title="Mmfood listen" allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-same-origin allow-scripts" src="https://embed.music.apple.com/us/album/mm-food-deluxe-edition/1558162066"></iframe>
+        </div>
+   </div>
+</section>
 
-  <!-- AÇÃO -->
-  <div class="action">
-    <div class="btn" data-key="Control">ATIRAR</div>
-    <div class="btn" data-key="Alt">USAR</div>
-  </div>
-</div>
+<!----The following section was re-created from his actual website. -->
+<section id="music">
+    <div class="row">
+        <div class="column2">
+            <div class="youtube-player" data-id="rpaonSDPw7Y"></div>
+        </div>
+        <div class="column2">
+            <div class="youtube-player" data-id="WW-9TcDTKa8"></div>
+        </div>
+        <div class="column2">
+            <div class="youtube-player" data-id="jTCI_bqMi_w"></div>
+        </div>
+    </div>
+</section>
 
-<script>
-  const dos = Dos(document.getElementById("dos"), {
-    wdosboxUrl: "https://js-dos.com/6.22/current/wdosbox.js"
-  });
-
-  dos.run("https://js-dos.com/cdn/upload/DOOM-@evilution.zip");
-
-  function pressKey(key) {
-    document.dispatchEvent(new KeyboardEvent("keydown", { key }));
-  }
-
-  function releaseKey(key) {
-    document.dispatchEvent(new KeyboardEvent("keyup", { key }));
-  }
-
-  document.querySelectorAll(".btn").forEach(btn => {
-    const key = btn.dataset.key;
-
-    btn.addEventListener("touchstart", e => {
-      e.preventDefault();
-      pressKey(key);
-    });
-
-    btn.addEventListener("touchend", e => {
-      e.preventDefault();
-      releaseKey(key);
-    });
-  });
-</script>
-
+<footer>
+    <div class="row">
+        <div class="column2">
+            <h2>Search</h2>
+            <h2>FAQ</h2>
+        </div>
+        <div class="column2">
+            <label for="email">Join the MF DOOM Email List</label>
+            <input type="email" id="email"><i class="fas fa-envelope"></i></input>  
+        </div>
+        <div class="column2">
+            <a href="#" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
+		    <a href="#" aria-label="Youtube"><i class="fab fa-youtube"></i></a>
+		    <a href="#" aria-label="Google"><i class="fab fa-google-play"></i></a>
+        </div>
+    </div>
+</footer>
+<script src="script.js"></script>
 </body>
-</html>
+          </html>
